--- a/HTML 5: Bölüm 1/03-paragraphs.html
+++ b/HTML 5: Bölüm 1/03-paragraphs.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Paragraphs</title>
   </head>
   <body>
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi magni facere
