--- a/HTML 5: Bölüm 1/05-images.html
+++ b/HTML 5: Bölüm 1/05-images.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Images</title>
   </head>
   <body>
     <!-- https://www.w3schools.com/html/html_images.asp -->
     <!-- png -> jpeg cevirmek yer kazandirir -->
-	
+
     <!-- <img src="images/sokak.jpg" alt="sokak resmi" /> -->
     <img src="images/sokak.jpg" alt="sokak resmi" />
     <img
