--- a/HTML 5: Bölüm 1/08-div_span.html
+++ b/HTML 5: Bölüm 1/08-div_span.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Div & Span</title>
   </head>
   <body>
     <!-- https://www.w3schools.com/html/html5_semantic_elements.asp -->
