--- a/CSS: Bölüm 2/00-box_model.html
+++ b/CSS: Bölüm 2/00-box_model.html
@@ -6,9 +6,12 @@
     <title>Document</title>
   </head>
   <style>
-	#showcase{background-color: #2e4c6d;}
-	#how_it_works{background-color: #fc997c;}
-	
+    #showcase {
+      background-color: #2e4c6d;
+    }
+    #how_it_works {
+      background-color: #fc997c;
+    }
   </style>
   <body>
     <main>
