--- a/CSS: Bölüm 2/03-border.html
+++ b/CSS: Bölüm 2/03-border.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Border</title>
   </head>
   <style>
     /* https://www.w3schools.com/css/css_border.asp */
