--- a/Uygulamalar/movie-app/uygulama-8/index.html
+++ b/Uygulamalar/movie-app/uygulama-8/index.html
@@ -77,12 +77,20 @@
                   </tr>
                 </table>
               </div>
-			  <div id="fragmanlar">
+              <div id="fragmanlar">
                 <h2>Fragmanlar</h2>
                 <table>
                   <tr style="vertical-align: top">
                     <td>
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/7BG-BpvkYB8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <iframe
+                        width="560"
+                        height="315"
+                        src="https://www.youtube.com/embed/7BG-BpvkYB8"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen
+                      ></iframe>
                     </td>
                     <td style="width: 10px"></td>
                     <td>
@@ -97,7 +105,15 @@
                   </tr>
                   <tr>
                     <td>
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/mO1yXwRfxGk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <iframe
+                        width="560"
+                        height="315"
+                        src="https://www.youtube.com/embed/mO1yXwRfxGk"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen
+                      ></iframe>
                     </td>
                     <td style="width: 10px"></td>
                     <td style="vertical-align: top">
@@ -114,7 +130,15 @@
                   </tr>
                   <tr>
                     <td>
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/hfa5F-kRTq4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <iframe
+                        width="560"
+                        height="315"
+                        src="https://www.youtube.com/embed/hfa5F-kRTq4"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen
+                      ></iframe>
                     </td>
                     <td style="width: 10px"></td>
                     <td style="vertical-align: top">
