--- a/CSS: Bölüm 1/03-external_css.html
+++ b/CSS: Bölüm 1/03-external_css.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="03-style.css">
+    <link rel="stylesheet" href="03-style.css" />
     <style>
       ul {
         list-style-type: none;
       }
       a {
-        color: #75C2F6;
+        color: #75c2f6;
         text-decoration: none;
       }
     </style>
