--- a/CSS: Bölüm 1/04-id_class_selectors.html
+++ b/CSS: Bölüm 1/04-id_class_selectors.html
@@ -4,17 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-	<style>
-		section{background-color: #2e4c6d;}
-		.f20{font-size: 20px;}
-		.f18{font-size: 18px;}
-		#page-title{font-size: 20px; border-bottom: 2px solid red;}
-		#page-subtitle{border:2px solid orange ;}
-		.text-white{color: #fff;}
-	</style>
+    <style>
+      section {
+        background-color: #2e4c6d;
+      }
+      .f20 {
+        font-size: 20px;
+      }
+      .f18 {
+        font-size: 18px;
+      }
+      #page-title {
+        font-size: 20px;
+        border-bottom: 2px solid red;
+      }
+      #page-subtitle {
+        border: 2px solid orange;
+      }
+      .text-white {
+        color: #fff;
+      }
+    </style>
   </head>
   <body>
-
     <main>
       <section>
         <h1 id="page-title" class="text-white f20">Welcome To MovieApp</h1>
