--- a/CSS: Bölüm 1/07-kalitim.html
+++ b/CSS: Bölüm 1/07-kalitim.html
@@ -5,21 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-		p{color: red;}
-		p{border: 1px solid green;}
-		em{border: inherit;}
-		em{color: initial;}
+      p {
+        color: red;
+      }
+      p {
+        border: 1px solid green;
+      }
+      em {
+        border: inherit;
+      }
+      em {
+        color: initial;
+      }
     </style>
   </head>
   <body>
     <main>
       <section>
-        <h1 id="page-title" class="text-yellow">
-          Welcome To MovieApp
-        </h1>
+        <h1 id="page-title" class="text-yellow">Welcome To MovieApp</h1>
         <p>
-          Lorem ipsum dolor sit amet <em>consectetur</em>, adipisicing elit. Sed,
-          molestiae?
+          Lorem ipsum dolor sit amet <em>consectetur</em>, adipisicing elit.
+          Sed, molestiae?
         </p>
       </section>
       <section>
