--- a/CSS: Bölüm 2/15-bg_image.html
+++ b/CSS: Bölüm 2/15-bg_image.html
@@ -42,9 +42,17 @@
         text-decoration: none;
         color: #fff;
       }
+      .nav-ul__item--login a {
+        color: #fff;
+        background-color: #2e4c6d;
+        padding: 4px 16px;
+        border: 2px solid #fff;
+        border-radius: 8px;
+      }
 
       #showcase {
-        background-color: #2e4c6d;
+        background-image: url('home-bg.jpeg');
+        background-position:center;
         height: 500px;
         width: 100%;
         padding: 10px;
@@ -57,9 +65,17 @@
         content: "\21AA";
         color: #fff;
       }
+      .nav-ul__item--login::before {
+        content: none;
+      }
       .nav-ul__item a:hover,
       .nav-ul__item:hover::before {
         color: #2e4c6d;
+      }
+      .nav-ul__item--login a:hover {
+        color: #2e4c6d;
+        background-color: #fff;
+        border: 2px solid #2e4c6d;
       }
       .nav-ul__item a:active,
       .nav-ul__item:active::before {
@@ -73,13 +89,13 @@
       <nav class="nav">
         <ul class="nav-ul">
           <li class="nav-ul__item">
-            <a href="#">Home</a>
+            <a href="#">Filmler</a>
           </li>
           <li class="nav-ul__item">
-            <a href="#">Movies</a>
+            <a href="#">Diziler</a>
           </li>
-          <li class="nav-ul__item">
-            <a href="#">Contact</a>
+          <li class="nav-ul__item nav-ul__item--login">
+            <a href="#">Login</a>
           </li>
         </ul>
       </nav>
