--- a/Uygulamalar/Bootstrap/Awesome-Blog/5/blogs.html
+++ b/Uygulamalar/Bootstrap/Awesome-Blog/5/blogs.html
@@ -147,6 +147,10 @@
 	<footer class="py-5 bg-dark text-white">
 		<div class="container text-center">
 			<span>All Rights Reserved. @2025</span>
+			<br>
+			<span class="fw-light fst-italic">Made by
+				<a href="https://github.com/muratdanaci" class="text-decoration-none text-warning" target="_blank">Murat Danacı</a>
+			</span>
 		</div>
 	</footer>
 	
