--- a/Uygulamalar/Bootstrap/Awesome-Blog/5/index.html
+++ b/Uygulamalar/Bootstrap/Awesome-Blog/5/index.html
@@ -9,6 +9,7 @@
 	crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="style.css">
 	<title>Awesome Blog</title>
+	<link rel="icon" href="Img/favicon.png" type="image/x-icon">
 </head>
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark">
