--- a/Uygulamalar/Bootstrap/Awesome-Blog/5/blogs.html
+++ b/Uygulamalar/Bootstrap/Awesome-Blog/5/blogs.html
@@ -8,7 +8,7 @@
 	integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
 	crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="style.css">
-	<title>Awesome Blog</title>
+	<title>Blogs | Awesome Blog</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark bg-primary">
