--- a/Uygulamalar/Bootstrap/Awesome-Blog/5/blogs.html
+++ b/Uygulamalar/Bootstrap/Awesome-Blog/5/blogs.html
@@ -9,6 +9,7 @@
 	crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="style.css">
 	<title>Blogs | Awesome Blog</title>
+	<link rel="icon" href="Img/favicon.png" type="image/x-icon">
 </head>
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark bg-primary">
@@ -126,7 +127,7 @@
 								<a href="#" class="page-link">Previous</a>
 							</li>
 							<li class="page-item">
-								<a href="#" class="page-link">1</a>
+								<a href="#" class="page-link active">1</a>
 							</li>
 							<li class="page-item">
 								<a href="#" class="page-link">2</a>
