--- a/JavaScript: Bölüm 2 - JavaScript DOM/06-adding_new_task.html
+++ b/JavaScript: Bölüm 2 - JavaScript DOM/06-adding_new_task.html
@@ -36,12 +36,7 @@
 		</div>
 	</div>
 	<script>
-
 		"use strict"; // hatasiz yazim
-
-		let sonuc;
-
-		let ul = document.getElementById("task-list");
 
 		let gorevListesi = [
 			{"id": 1, "gorevAdi": "Gorev 1"},
@@ -49,28 +44,49 @@
 			{"id": 3, "gorevAdi": "Gorev 3"},
 			{"id": 4, "gorevAdi": "Gorev 4"},
 		];
-
-		for (let gorev of gorevListesi) {
-			let li = `
-			<li class="task list-group-item">
-				<div class="form-check">
-					<input type="checkbox" id="${gorev.id}" class="form-check-input">
-					<label for="${gorev.id}" class="form-check-label">${gorev.gorevAdi}</label>
-				</div>
-			</li>
-		`;
-			// https://www.w3schools.com/jsref/met_node_insertadjacenthtml.asp
-			ul.insertAdjacentHTML("beforeend",li);
-		}		
-
-		// document.querySelector("#btnClear").addEventListener("click", function(event) {
-		// 	console.log("click event: clear");
-		// })
 		
+		displayTask();
+		function displayTask() {
+				let ul = document.getElementById("task-list");
+				ul.innerHTML = "";
+
+				for (let gorev of gorevListesi) {
+					let li = `
+				<li class="task list-group-item">
+					<div class="form-check">
+						<input type="checkbox" id="${gorev.id}" class="form-check-input">
+						<label for="${gorev.id}" class="form-check-label">${gorev.gorevAdi}</label>
+					</div>
+				</li>
+			`;
+				// https://www.w3schools.com/jsref/met_node_insertadjacenthtml.asp
+				ul.insertAdjacentHTML("beforeend",li);
+			}		
+		}
+
 		document.querySelector("#btnAddNewTask").addEventListener("click", newTask);
+		document.querySelector("#btnAddNewTask").addEventListener("onkeypress", function() {
+			if (event.key == "Enter") {
+				document.getElementById("btnAddNewTask").click();
+			}
+		});
+
 		function newTask(event) {
-			// console.log(event.target);
-			event.target.classList.add("btn-lg"); // butonu buyutur
+			let taskInput = document.querySelector("#txtTaskName"); // taskInput.value diyerek value degerine ulasiriz
+			// https://www.w3schools.com/jsref/obj_keyboardevent.asp
+
+
+
+			if (taskInput.value == "") {
+				alert("Lütfen bir görev giriniz!");
+			} else {
+				gorevListesi.push({"id": gorevListesi.lengt + 1, "gorevAdi": taskInput.value});
+				taskInput.value = "";
+				displayTask();
+			}
+
+			
+
 			event.preventDefault(); //bu sayede buton tipi submit olmasina ragmen sayfa yenilenmez
 		}
 	</script>
